Jetpack Manage: Fix issue with split button chevron icon misalignment.  (#84331)

--- a/client/jetpack-cloud/style.scss
+++ b/client/jetpack-cloud/style.scss
@@ -471,7 +471,7 @@ body.is-section-jetpack-cloud-pricing.is-group-jetpack-cloud .mini-cart {
 		}
 	}
 
-	.gridicon {
+	.button .gridicon {
 		width: 20px;
 		height: 20px;
 		fill: var(--studio-white);
